[gd_scene load_steps=13 format=3 uid="uid://dl7pne46mi0qa"]

[ext_resource type="Script" uid="uid://dap4o1j3vst8e" path="res://game.gd" id="1_7jktm"]
[ext_resource type="PackedScene" uid="uid://r4ncqir4b5ji" path="res://Player/player.tscn" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://ccc5gg3ylwnd2" path="res://Track/track_generator.tscn" id="2_feb5d"]
[ext_resource type="PackedScene" uid="uid://b4uxfedkq3set" path="res://Track/RunnerTracks/track_0.tscn" id="3_fc0e3"]
[ext_resource type="Script" uid="uid://7glabykuit1n" path="res://Camera/cam.gd" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://d3tkqlmnuscb7" path="res://Kaiju/kaiju.tscn" id="5_eow3j"]
[ext_resource type="PackedScene" uid="uid://bjoy754a7yx0j" path="res://Track/obstacle_generator.tscn" id="7_eow3j"]
[ext_resource type="PackedScene" uid="uid://bj3p8mxktpdun" path="res://UI/HUD.tscn" id="8_j5wjh"]
[ext_resource type="Script" uid="uid://bmosl4lmobt1l" path="res://vfx_container.gd" id="9_vef74"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vef74"]
sky_top_color = Color(0.482353, 0.501961, 0.466667, 1)
sky_horizon_color = Color(0.92549, 0.501961, 0.388235, 1)
sky_curve = 0.0989632
sky_energy_multiplier = 0.7
ground_bottom_color = Color(0.211765, 0.2, 0.160784, 1)
ground_horizon_color = Color(0.360784, 0.360784, 0.27451, 1)
sun_angle_max = 19.09

[sub_resource type="Sky" id="Sky_hve3p"]
sky_material = SubResource("ProceduralSkyMaterial_vef74")

[sub_resource type="Environment" id="Environment_vef74"]
background_mode = 2
background_color = Color(0.580392, 0.52549, 0.301961, 1)
sky = SubResource("Sky_hve3p")
sky_custom_fov = 65.3
sky_rotation = Vector3(0.141372, -1.67552, 0)
ambient_light_source = 3
ambient_light_color = Color(0.245581, 0.134359, 0.0566037, 1)
glow_enabled = true

[node name="Game" type="Node3D"]
script = ExtResource("1_7jktm")

[node name="Player" parent="." node_paths=PackedStringArray("_camera") instance=ExtResource("1_e2o6t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
_camera = NodePath("../Camera3D")

[node name="Kaiju" parent="." node_paths=PackedStringArray("player_ref") instance=ExtResource("5_eow3j")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20, 0, 0)
player_ref = NodePath("../Player")

[node name="TrackGenerator" parent="." node_paths=PackedStringArray("player_reference", "kaiju_reference", "initial_tile_scene") instance=ExtResource("2_feb5d")]
player_reference = NodePath("../Player")
kaiju_reference = NodePath("../Kaiju")
terrain_velocity = 5.0
tile_scale_factor = 7.0
initial_tile_scene = NodePath("Track0")

[node name="Track0" parent="TrackGenerator" instance=ExtResource("3_fc0e3")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 34, 84.645, -10.784)

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 3, 0)
current = true
script = ExtResource("5_7jktm")
target = NodePath("../Player")
NOISE_SHAKE_STRENGTH = 10.0
SHAKE_DECAY_RATE = 2.0
metadata/_edit_group_ = true

[node name="ObstacleGenerator" parent="." instance=ExtResource("7_eow3j")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("8_j5wjh")]

[node name="ExtractionTimer" type="Timer" parent="."]
wait_time = 300.0

[node name="VFX_container" type="Node3D" parent="."]
script = ExtResource("9_vef74")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vef74")
